# object_recognition_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  stack.xml  stack.yaml
action/: ObjectRecognition.action
doc/: action.rst  conf.py  index.rst  msgs.rst  srv.rst
include/object_recognition_msgs/: shape_conversion.h
msg/: ObjectId.msg  ObjectInformation.msg  ObjectType.msg  RecognizedObject.msg  RecognizedObjectArray.msg  Shape.msg  Table.msg  TableArray.msg
python/: CMakeLists.txt
src/publisher/: CMakeLists.txt
srv/: GetObjectInformation.srv
