<package>
  <name>object_recognition_msgs</name>
  <version>0.3.18</version>
  <description>Object_recognition_msgs contains the ROS message and the actionlib definition used in object_recognition_core</description>
  <author email="vrabaud@willowgarage.com">Vincent Rabaud</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/object_recognition</url>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
