<package format="3">
  <name>object_recognition_msgs</name>
  <version>2.0.0</version>
  <description>Object_recognition_msgs contains the ROS message and the actionlib definition used in object_recognition_core</description>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/object_recognition</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <build_depend>action_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
